--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,12 @@ img{
     text-decoration: none;
     color: #333;
 }
-
+.alinear-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 /* ===========================================propuesta================================================ */
 #propuesta{
     background-color: #e5e5e5;
@@ -288,7 +293,7 @@ footer h4{
 }
 .redes{
     margin-top: 1.5rem;
-    margin-left: 4.7rem;
+    margin-left: 0.5rem;
     display: flex;
     justify-content: start;
     align-items: center;
@@ -388,7 +393,6 @@ footer h4{
         align-items: center;
     }
     .redes{
-        margin-left: 7.5rem;
         margin-bottom: 3rem;
     }
     .redes a{
