Proyecto final-mobile fixeado

--- a/css/style.css
+++ b/css/style.css
@@ -490,4 +490,8 @@ footer h4{
         font-weight: 800;
         text-align: center;
     }
+    .alinear-h3{
+        text-align: center;
+    }
+    
 }
